--- a/src/Hosted/bloglist.html
+++ b/src/Hosted/bloglist.html
@@ -103,7 +103,7 @@
           </div>
           <div class="col-sidebar" style="background-color:#eee;">
             <hr class="space-xs">
-            <h2 style="margin:0;">Authors</h2>
+            <h2 style="margin:0;">Blogs</h2>
             <hr class="space-xs">
             <div class="menu-inner menu-inner-vertical authors">
               <ul>
