--- a/src/Hosted/index.html
+++ b/src/Hosted/index.html
@@ -34,7 +34,7 @@
         <div class="menu-cnt">
           <ul>
             <li>
-              <a href="/index.html">Consulting</a>
+              <a href="/">Consulting</a>
             </li>
             <li class="mega-dropdown mega-tabs mega-open-source">
               <a href="#">Open Source</a>
