--- a/src/Hosted/userbloglist.html
+++ b/src/Hosted/userbloglist.html
@@ -25,21 +25,17 @@
   </nav>
 
     <div class="user-information container">
+        <div class="user-social">
+            <a class="twitter" href="https://twitter.com"><i class="fab fa-twitter"></i></a>
+            <a class="linkedin" href="https://linkedin.com"><i class="fab fa-linkedin"></i></a>
+            <a class="rss"><i class="fa fa-rss"></i></a>
+        </div>
+        <div class="user-name">John Doe</div>
         <div class="user-profile-picture">
             <img src="https://via.placeholder.com/400 " />
         </div>
-        <div class="user-bio">
-            <div class="user-top">
-                <p class="user-name">John Doe</p>
-                <div class="user-social">
-                    <a class="twitter" href="https://twitter.com"><i class="fab fa-twitter"></i></a>
-                    <a class="linkedin" href="https://linkedin.com"><i class="fab fa-linkedin"></i></a>
-                    <a class="rss"><i class="fa fa-rss"></i></a>
-                </div>
-            </div>
-            <div class="user-description">
-                Maecenas eget nunc dui. Fusce sit amet diam vel arcu auctor accumsan id sit amet libero. Nunc tempus purus et cursus ultrices. Quisque sollicitudin interdum arcu, ut posuere enim posuere id. Vivamus congue ipsum at ante ultrices, nec sodales turpis fringilla. Suspendisse vitae volutpat lacus. Donec luctus, nisl id sollicitudin condimentum, lacus mauris condimentum massa, posuere elementum magna magna vitae nibh. Ut non ligula purus. Integer sed metus quis nulla consectetur facilisis. Aliquam mattis, massa id rhoncus viverra, est nulla molestie arcu, non aliquam nunc nisi nec justo. Proin id pellentesque sapien, vel aliquet lorem. Nam tincidunt nisi at ligula fermentum, et ultrices ante suscipit. Pellentesque scelerisque non metus vitae consectetur. Phasellus mollis pharetra magna, nec luctus augue.
-            </div>
+        <div class="user-description">
+            Maecenas eget nunc dui. Fusce sit amet diam vel arcu auctor accumsan id sit amet libero. Nunc tempus purus et cursus ultrices. Quisque sollicitudin interdum arcu, ut posuere enim posuere id. Vivamus congue ipsum at ante ultrices, nec sodales turpis fringilla. Suspendisse vitae volutpat lacus. Donec luctus, nisl id sollicitudin condimentum, lacus mauris condimentum massa, posuere elementum magna magna vitae nibh. Ut non ligula purus. Integer sed metus quis nulla consectetur facilisis. Aliquam mattis, massa id rhoncus viverra, est nulla molestie arcu, non aliquam nunc nisi nec justo. Proin id pellentesque sapien, vel aliquet lorem. Nam tincidunt nisi at ligula fermentum, et ultrices ante suscipit. Pellentesque scelerisque non metus vitae consectetur. Phasellus mollis pharetra magna, nec luctus augue.
         </div>
     </div>
   <main>
