Added content for careers page #10

--- a/src/Hosted/careers.html
+++ b/src/Hosted/careers.html
@@ -30,19 +30,17 @@
     <main>
         <section class="section-base section-bottom-layer">
             <div class="container">
-                <hr class="space" />
+                
                 <div class="row">
                     <div class="col-lg-6">
-                        <h1>Join us at IntelliFactory</h1>
-                        <p>
-                            We’re web applications using F#. Come join us here at the
-                            IntelliFactory. Lorem ipsum dolor sit amet, consectetur
-                            adipiscing elit. Nulla et mollis ex, id posuere purus. Vivamus
-                            vel convallis tellus, eget bibendum felis. Duis ligula augue,
-                            vestibulum ut dignissim quis, feugiat ac dolor. Quisque sapien
-                            sapien, commodo a interdum eget, tincidunt nec massa. Nam
-                            fringilla est non augue luctus, vitae mollis sem dictum. Duis
-                            vel est ultrices, euismod odio nec, euismod diam.
+                       <hr class="space-sm careers-space-large-screen" />
+                       <h1>Join us at IntelliFactory</h1>
+                       <p>
+                            We have built a dynamic team of highly driven professionals
+                            with a commitment to technical excellence. At Streamroot,
+                            we are constantly striving for improvement:
+                            of our products, our industry and ourselves.
+                            We dare to explore, innovate and iterate.
                         </p>
                         <a href="#current-jobs" class="btn btn-border btn-circle btn-sm">See open jobs</a>
                     </div>
@@ -65,56 +63,52 @@
                 <hr class="space-lg" />
                 <div class="row">
                     <div class="col-lg-4">
-                        <h2>Who We Are</h2>
+                        <h2 class="align-center">Community</h2>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipiscing elitsed do
-                            eiusmod tempor incididunt utlabore et dolore magna aliqua.
-                            Utenim ad minim veniam quis nostrud exercitation ullamco laboris
-                            .
+                            Creating an inviting office environment breeds creativity and 
+                            hard work. Whether we are destroying whiteboards in brainstorming 
+                            sessions, or just eating lunch together, we’ve 
+                            created a close-knit team and strong support network.
                         </p>
                     </div>
                     <div class="col-lg-4">
-                        <h2>What We Do</h2>
+                        <h2 class="align-center">Engagement</h2>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipiscing elitsed do
-                            eiusmod tempor incididunt utlabore et dolore magna aliqua.
-                            Utenim ad minim veniam quis nostrud exercitation ullamco laboris
-                            .
+                            We are active and committed members of community. 
+                            We regularly attend industry events where we make important contributions and connections. 
+                            When we’re not the organizing event, we’re sharing our expertise on stage or via demos.
                         </p>
                     </div>
                     <div class="col-lg-4">
-                        <h2>How We Do It</h2>
+                        <h2 class="align-center">Impact</h2>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipiscing elitsed do
-                            eiusmod tempor incididunt utlabore et dolore magna aliqua.
-                            Utenim ad minim veniam quis nostrud exercitation ullamco laboris
-                            .
+                            We develop technology that makes a measurable difference around the world. 
+                            We value innovation that matters and gets results. 
+                            Join us at IntelliFactory and become a leader and active contributor in this influential industry.
                         </p>
                     </div>
                 </div>
                 <hr class="space" />
-                <h2 id="current-jobs">Currently open roles.</h2>
+                <h2 id="current-jobs">Current open roles:</h2>
                 <hr class="space" />
                 <hr class="space-xs" />
-                <h3>Software Engineer</h3>
+                <h3>F# developer</h3>
                 <hr class="space-sm" />
                 <div class="row">
                     <div class="col-lg-9">
                         <div class="row">
                             <div class="col-lg-8">
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipiscing elitsed do
-                                    eiusmod tempor incididunt utlabore et dolore magna aliqua.
-                                    Utenim ad minim veniam quis nostrud exercitation ullamco
-                                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                                    irure dolor in reprehenderit
+                                    We are looking for a motivated F# developer to help us grow our business through a strong product strategy and expanded online presence. 
+                                    You will be responsible for helping us build our products for leading a variety of digital initiatives. 
+                                    Creativity, initiative and a proactive work ethic are highly valued!
                                 </p>
                             </div>
                             <div class="col-lg-4">
                                 <ul class="icon-list icon-circle">
-                                    <li>Knowledge of blockchain</li>
+                                    <li>Knowledge of F# development</li>
                                     <li>Team communication</li>
-                                    <li>Experience in Android apps</li>
+                                    <li>Experience in functional programming</li>
                                 </ul>
                             </div>
                         </div>
@@ -136,7 +130,7 @@
                                             <i class="im-calendar text-md"></i>
                                             <div class="caption">
                                                 <h3 class="text-sm">Experience</h3>
-                                                <p>Min 5 years</p>
+                                                <p>Min 2 years</p>
                                             </div>
                                         </div>
                                     </td>
@@ -159,25 +153,25 @@
                     </div>
                 </div>
                 <hr />
-                <h3>React Developer</h3>
+                <h3>Software developer</h3>
                 <hr class="space-sm" />
                 <div class="row">
                     <div class="col-lg-9">
                         <div class="row">
                             <div class="col-lg-8">
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipiscing elitsed do
-                                    eiusmod tempor incididunt utlabore et dolore magna aliqua.
-                                    Utenim ad minim veniam quis nostrud exercitation ullamco
-                                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                                    irure dolor in reprehenderit
+                                    As a software engineer, you will join our core team
+                                    working on our latest producst. You will design,
+                                    implement advanced features, with the
+                                    goal of improving efficiency. You will also work on the 
+                                    hard challenge of always users every day.
                                 </p>
                             </div>
                             <div class="col-lg-4">
                                 <ul class="icon-list icon-circle">
-                                    <li>Knowledge of blockchain</li>
-                                    <li>Team communication</li>
-                                    <li>Experience in Android apps</li>
+                                    <li>Strong programming knowledge</li>
+                                    <li>Problem solving mindset</li>
+                                    <li>Experience in .NET framework</li>
                                 </ul>
                             </div>
                         </div>
@@ -199,7 +193,7 @@
                                             <i class="im-calendar text-md"></i>
                                             <div class="caption">
                                                 <h3 class="text-sm">Experience</h3>
-                                                <p>Min 5 years</p>
+                                                <p>Min 3 years</p>
                                             </div>
                                         </div>
                                     </td>
