#17 - Use minified css in html templates, make sure the font-awesome iconset is included in every page, removing iconsmind icon set wherever possible, enable sourcemap

--- a/src/Hosted/index.html
+++ b/src/Hosted/index.html
@@ -6,14 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>${Title}IntelliFactory</title>
   <meta name="description" content="">
-  <link rel="stylesheet" href="/themekit/css/bootstrap-grid.css">
-  <link rel="stylesheet" href="/themekit/css/style.css">
-  <link rel="stylesheet" href="/themekit/css/content-box.css">
-  <link rel="stylesheet" href="/themekit/css/media-box.css">
-  <link rel="stylesheet" href="/themekit/css/social.css">
-  <link rel="stylesheet" href="/themekit/css/contact-form.css">
-  <link rel="stylesheet" href="/assets/skin.css">
-  <link rel="stylesheet" href="/assets/custom.css">
+  <link rel="stylesheet" href="/themekit/css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="/themekit/css/style.min.css">
+  <link rel="stylesheet" href="/themekit/css/content-box.min.css">
+  <link rel="stylesheet" href="/themekit/css/media-box.min.css">
+  <link rel="stylesheet" href="/themekit/css/social.min.css">
+  <link rel="stylesheet" href="/themekit/css/contact-form.min.css">
+  <link rel="stylesheet" href="/assets/skin.min.css">
+  <link rel="stylesheet" href="/assets/custom.min.css">
   <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
   <script ws-replace="Head"></script>
   <script src="/themekit/scripts/main.js"></script>
@@ -404,7 +404,6 @@
           </div>
       </div>
       <div class="bottom" ws-replace="Cookie"></div>
-      <link rel="stylesheet" href="/themekit/media/icons/iconsmind/line-icons.min.css">
       <link async rel="stylesheet" href="/themekit/media/icons/fontawesome/icons.css">
       <script src="/themekit/scripts/parallax.min.js"></script>
       <script src="/themekit/scripts/imagesloaded.min.js"></script>
