--- a/src/Hosted/openPosition.html
+++ b/src/Hosted/openPosition.html
@@ -8,17 +8,17 @@
     <meta name="description" content="" />
     <script src="themekit/scripts/jquery.min.js"></script>
     <script src="themekit/scripts/main.js"></script>
-    <link rel="stylesheet" href="themekit/css/bootstrap-grid.css" />
-    <link rel="stylesheet" href="themekit/css/style.css" />
-    <link rel="stylesheet" href="themekit/css/magnific-popup.css" />
-    <link rel="stylesheet" href="themekit/css/contact-form.css" />
-    <link rel="stylesheet" href="themekit/css/content-box.css" />
+    <link rel="stylesheet" href="themekit/css/bootstrap-grid.min.css" />
+    <link rel="stylesheet" href="themekit/css/style.min.css" />
+    <link rel="stylesheet" href="themekit/css/magnific-popup.min.css" />
+    <link rel="stylesheet" href="themekit/css/contact-form.min.css" />
+    <link rel="stylesheet" href="themekit/css/content-box.min.css" />
     <link
       rel="stylesheet"
       href="themekit/media/icons/iconsmind/line-icons.min.css"
     />
-    <link rel="stylesheet" href="assets/skin.css" />
-    <link rel="stylesheet" href="assets/custom.css" />
+    <link rel="stylesheet" href="assets/skin.min.css" />
+    <link rel="stylesheet" href="assets/custom.min.css" />
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
   </head>
   <body>
@@ -147,7 +147,7 @@
       <footer class="footer light">
           <div ws-replace="Footer"></div>
           <div class="bottom" ws-replace="Cookie"></div>
-          <link rel="stylesheet" href="themekit/media/icons/iconsmind/line-icons.min.css">
+          <link async rel="stylesheet" href="/themekit/media/icons/fontawesome/icons.css">
           <script src="themekit/scripts/contact-form/contact-form.js"></script>
           <script src="themekit/scripts/tab-accordion.js"></script>
           <script src="themekit/scripts/maps.min.js"></script>
