Added content for Trainings page #19

--- a/src/Hosted/trainings.html
+++ b/src/Hosted/trainings.html
@@ -43,8 +43,8 @@
                         <hr class="space-xs" />
                         <h1>Trainings by experts</h1>
                         <p>
-                            Bring in the experts. Let us help you to understand the process of your application's development cycle with our
-                            onsite trainings taught by our own experts.
+                            Bring in the experts. Let us help you to understand the process of your application's development 
+                            cycle with our trainings taught by our own experts.
                         </p>
                     </div>
                     <div class="col-lg-6">
@@ -101,11 +101,9 @@
                             <div class="row">
                                 <div class="col-lg-8">
                                     <p>
-                                        Lorem ipsum dolor sit amet consectetur adipiscing elitsed do
-                                        eiusmod tempor incididunt utlabore et dolore magna aliqua.
-                                        Utenim ad minim veniam quis nostrud exercitation ullamco
-                                        laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                                        irure dolor in reprehenderit
+                                        Our next trainings will be about F# programming language and its benefits. 
+                                        What do you gain by using the F# language? How can you make switch?
+                                        We will answer all these question in our training. Join us at 15th of January!
                                     </p>
                                 </div>
                                 <div class="col-lg-4">
@@ -134,7 +132,7 @@
                                                 <i class="im-calendar text-md"></i>
                                                 <div class="caption">
                                                     <h3 class="text-sm">Date</h3>
-                                                    <p>15-22 January</p>
+                                                    <p>15 January</p>
                                                 </div>
                                             </div>
                                         </td>
@@ -163,11 +161,8 @@
                             <div class="row">
                                 <div class="col-lg-8">
                                     <p>
-                                        Lorem ipsum dolor sit amet consectetur adipiscing elitsed do
-                                        eiusmod tempor incididunt utlabore et dolore magna aliqua.
-                                        Utenim ad minim veniam quis nostrud exercitation ullamco
-                                        laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                                        irure dolor in reprehenderit
+                                        This training will be about our 3 major products: WebSharper, Bolero and SiteFi. 
+                                        We will show the development process with our products and answer any questions you might have.
                                     </p>
                                 </div>
                                 <div class="col-lg-4">
@@ -221,8 +216,8 @@
                 <hr class="space-lg" />
                 <h2 class="align-center">Trainings hold</h2>
                 <p class="align-center width-650">
-                    Lorem ipsum dolor sit amet no sea takimata sanctus est lorem ipsum dolor sit amete
-                    sare nostrud exercitation ullamco sea takiquis nostrud exercitatio.
+                    So far we have hold tens of trainings with hundreds of participants. 
+                    We are looking forward to see you in our future trianigs.
                 </p>
                 <hr class="space" />
                 <table class="table table-grid table-border align-center table-full-sm no-padding-y">
@@ -233,45 +228,36 @@
                                     <div>
                                         <h3>Trainings held till now</h3>
                                         <div class="value">
-                                            <span class="text-md" data-to="15" data-speed="3000">12</span>
+                                            <span class="text-md" data-to="15" data-speed="3000">23</span>
                                             <span></span>
                                         </div>
                                     </div>
                                 </div>
                                 <hr class="space-xs" />
-                                <p>
-                                    Lorem ipsum dolor sit amet consectetur adipis ulla pariatur.
-                                </p>
                             </td>
                             <td>
                                 <div class="counter counter-vertical counter-icon align-center">
                                     <div>
                                         <h3>People joined</h3>
                                         <div class="value">
-                                            <span class="text-md" data-to="900" data-speed="3000" data-unit="+">9000</span>
+                                            <span class="text-md" data-to="900" data-speed="3000" data-unit="+">300+</span>
                                             <span></span>
                                         </div>
                                     </div>
                                 </div>
                                 <hr class="space-xs" />
-                                <p>
-                                    Lorem ipsum dolor sit amet consectetur adipis ulla pariatur.
-                                </p>
                             </td>
                             <td>
                                 <div class="counter counter-vertical counter-icon align-center">
                                     <div>
                                         <h3>Companies participated</h3>
                                         <div class="value">
-                                            <span class="text-md" data-to="12" data-speed="3000">5</span>
+                                            <span class="text-md" data-to="12" data-speed="3000">11</span>
                                             <span></span>
                                         </div>
                                     </div>
                                 </div>
                                 <hr class="space-xs" />
-                                <p>
-                                    Lorem ipsum dolor sit amet consectetur adipis ulla pariatur.
-                                </p>
                             </td>
                         </tr>
                     </tbody>
