Added content for Careers and Open Position pages #10

--- a/src/Hosted/careers.html
+++ b/src/Hosted/careers.html
@@ -35,7 +35,7 @@
                        <h1>Join us at IntelliFactory</h1>
                        <p>
                             We have built a dynamic team of highly driven professionals
-                            with a commitment to technical excellence. At Streamroot,
+                            with a commitment to technical excellence. At IntelliFactory,
                             we are constantly striving for improvement:
                             of our products, our industry and ourselves.
                             We dare to explore, innovate and iterate.
@@ -151,7 +151,7 @@
                     </div>
                 </div>
                 <hr />
-                <h3>Software developer</h3>
+                <h3>Software engineer</h3>
                 <hr class="space-sm" />
                 <div class="row">
                     <div class="col-lg-9">
@@ -159,10 +159,10 @@
                             <div class="col-lg-8">
                                 <p>
                                     As a software engineer, you will join our core team
-                                    working on our latest producst. You will design,
+                                    working on our latest products. You will design,
                                     implement advanced features, with the
-                                    goal of improving efficiency. You will also work on the 
-                                    hard challenge of always users every day.
+                                    goal of improving efficiency. You will also work on the
+                                    hard challenge of always improving the quality of service for the users.
                                 </p>
                             </div>
                             <div class="col-lg-4">
