--- a/src/Hosted/openPosition.html
+++ b/src/Hosted/openPosition.html
@@ -85,11 +85,11 @@
                           <div class="row">
                               <div class="col-lg-8">
                                   <p>
-                                      Lorem ipsum dolor sit amet consectetur adipiscing elitsed do
-                                      eiusmod tempor incididunt utlabore et dolore magna aliqua.
-                                      Utenim ad minim veniam quis nostrud exercitation ullamco
-                                      laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                                      irure dolor in reprehenderit
+                                      We are looking for a motivated F# developer to help us grow our business through a 
+                                      strong product strategy and expanded online presence.
+                                      You will be responsible for helping us build our products for 
+                                      leading a variety of digital initiatives.
+                                      Creativity, initiative and a proactive work ethic are highly valued!
                                   </p>
                               </div>
                               <div class="col-lg-4">
