Added #23 - RSS/atom feeds for user blogs Stuck on project file changes.

--- a/src/Hosted/userbloglist.html
+++ b/src/Hosted/userbloglist.html
@@ -30,7 +30,7 @@
             <a class="linkedin" href="https://linkedin.com"><i class="fab fa-linkedin"></i></a>
             <a class="rss"><i class="fa fa-rss"></i></a>
         </div>
-        <div class="user-name">John Doe</div>
+        <div class="user-name">${AuthorName}</div>
         <div class="user-profile-picture">
             <img src="https://via.placeholder.com/400 " />
         </div>
