--- a/src/Hosted/trainings.html
+++ b/src/Hosted/trainings.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Trainings</title>
     <meta name="description" content="">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <script src="/themekit/scripts/jquery.min.js"></script>
     <script src="/themekit/scripts/main.js"></script>
     <link rel="stylesheet" href="/themekit/css/bootstrap-grid.min.css">
@@ -24,9 +26,7 @@
 <body>
     <div id="preloader"></div>
     <!-- NAVIGATION MENU -->
-    <nav class="menu-classic menu-transparent light menu-fixed menu-one-page
-    align-right menu-wide" data-menu-anima="fade-bottom"
-         data-scroll-detect="true">
+    <nav class="menu-wide menu-transparent light menu-fixed menu-one-page align-right" data-menu-anima="fade-bottom" data-scroll-detect="true">
         <div ws-replace="MenuBar"></div>
     </nav>
     <div ws-replace="HeaderContent" ws-template="TrainingBody">
@@ -36,7 +36,7 @@
     </div>
     <main>
         <section class="section-base">
-            <div class="container" style="max-width: 1140px;">
+            <div class="container">
                 <!--- <hr class="space-lg" />  -->
                 <div class="row">
                     <div class="col-lg-6">
