--- a/src/Hosted/blogpost.html
+++ b/src/Hosted/blogpost.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>${Title}IntelliFactory</title>
   <meta name="description" content="">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/themekit/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="/themekit/css/style.min.css">
   <link rel="stylesheet" href="/themekit/css/content-box.min.css">
@@ -19,7 +21,7 @@
 </head>
 <body>
     <div id="preloader"></div>
-    <nav class="menu-classic ${IsTransparentHeader} light menu-fixed menu-one-page align-right" data-menu-anima="fade-bottom" data-scroll-detect="true">
+    <nav class="menu-wide ${IsTransparentHeader} light menu-fixed menu-one-page align-right" data-menu-anima="fade-bottom" data-scroll-detect="true">
         <div ws-replace="Menubar"></div>
     </nav>
     <header class="header-image ken-burn-center align-center light boxed-page-header" data-parallax="true" data-natural-height="600" data-natural-width="1920" data-bleed="0" data-image-src="http://via.placeholder.com/1920x700" data-offset="0">
