--- a/src/Hosted/careers.html
+++ b/src/Hosted/careers.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Careers</title>
     <meta name="description" content="" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">  
     <script src="themekit/scripts/jquery.min.js"></script>
     <script src="themekit/scripts/main.js"></script>
     <link rel="stylesheet" href="themekit/css/bootstrap-grid.min.css" />
@@ -20,9 +22,7 @@
 <body>
     <div id="preloader"></div>
     <!-- NAVIGATION MENU -->
-    <nav class="menu-classic menu-transparent light menu-fixed menu-one-page
-    align-right menu-wide" data-menu-anima="fade-bottom"
-         data-scroll-detect="true">
+    <nav class="menu-wide menu-transparent light menu-fixed menu-one-page align-right" data-menu-anima="fade-bottom" data-scroll-detect="true">
         <div ws-replace="MenuBar"></div>
     </nav>
     <main>
