--- a/src/Hosted/consulting.html
+++ b/src/Hosted/consulting.html
@@ -8,7 +8,9 @@
     <meta name="description" content="" />
     <script src="themekit/scripts/jquery.min.js"></script>
     <script src="themekit/scripts/main.js"></script>
-    <link rel="stylesheet" href="themekit/css/bootstrap-grid.min.css" />
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="themekit/css/bootstrap-grid.min.css" />
     <link rel="stylesheet" href="themekit/css/style.min.css" />
     <link rel="stylesheet" href="themekit/css/glide.min.css" />
     <link rel="stylesheet" href="themekit/css/content-box.min.css" />
@@ -23,9 +25,7 @@
 <body>
 	<div id="preloader"></div>
 	<!-- NAVIGATION MENU -->
-	<nav class="menu-classic menu-transparent light menu-fixed menu-one-page
-    align-right menu-wide" data-menu-anima="fade-bottom"
-		 data-scroll-detect="true">
+	<nav class="menu-wide menu-transparent light menu-fixed menu-one-page align-right" data-menu-anima="fade-bottom" data-scroll-detect="true">
 		<div ws-replace="MenuBar"></div>
 	</nav>
 	<!-- HEADER -->
