--- a/src/Hosted/contact.html
+++ b/src/Hosted/contact.html
@@ -8,6 +8,8 @@
     <meta name="description" content="">
     <script src="themekit/scripts/jquery.min.js"></script>
     <script src="themekit/scripts/main.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">  
     <link rel="stylesheet" href="themekit/css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="themekit/css/style.min.css">
     <link rel="stylesheet" href="themekit/css/contact-form.min.css">
@@ -18,7 +20,7 @@
 </head>
 <body>
     <div id="preloader"></div>
-    <nav class="menu-classic menu-transparent menu-fixed align-right light" data-menu-anima="fade-bottom" data-scroll-detect="true">
+    <nav class="menu-wide menu-transparent menu-fixed align-right light" data-menu-anima="fade-bottom" data-scroll-detect="true">
         <div ws-replace="MenuBar"></div>
     </nav>
     <main>
@@ -30,7 +32,7 @@
         <section class="section-base section-color">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-8">
+                    <div class="col-lg-7">
                         <h2>Do you have a project idea?</h2>
                         <h3>Tell us more and we'll get back to you as soon as we can.</h3>
                         <hr class="space-sm" />
@@ -57,15 +59,22 @@
                             </div>
                         </form>
                     </div>
+                    <div class="col-lg-1"></div>
                     <div class="col-lg-4">
                         <h2>Contact us</h2>
                         <hr class="space-sm" />
                         <ul class="text-list text-list-line">
-                            <li><b>Web</b><hr /><p>https://intellifactory.com</p></li>
-                            <li><b>Email</b><hr /><p>info@intellifactory.com</p></li>
-                            <li><b>Phone</b><hr /><p>(+36) 20 394 7198</p></li>
-                            <li><b>Office address</b><hr /><p>IntelliFactory Kft.</p></li>
-                            <li><hr /><p>1082 Budapest, Üllői út 46, 3/27, Hungary</p></li>
+                            <li><b>Web</b><hr /><p><a href="https://intellifactory.com">https://intellifactory.com</a></p></li>
+                            <li><b>Email</b><hr /><p><a href="mailto:hello@intellifactory.com">hello@intellifactory.com</a></p></li>
+                            <li><b>Phone</b><hr /><p>(+36) 203 947 198</p></li>
+                        </ul>
+                        <h2>Development offices</h2>
+                        <hr class="space-sm" />
+                        <ul class="text-list text-list-line">
+                            <li><b>IntelliFactory Kft.</b><p></p></li>
+                            <li><p>1082 Budapest, Üllői út 46, 3/27, Hungary</p></li>
+                            <li><p>7626 Pécs, Király utca 64, 1/2, Hungary</p></li>
+                            <li><p>7400 Kaposvár, Dózsa György utca 1, 1/4, Hungary</p></li>
                         </ul>
                         <button class="btn btn-xs btn-circle" onclick="location.href='https://www.google.com/maps/place/IntelliFactory/@47.4855138,19.0712344,3a,75y,26.69h,132.95t/data=!3m6!1e1!3m4!1sb0C5F31zJHyst3muz9OV8Q!2e0!7i16384!8i8192!4m5!3m4!1s0x4741dc580040a189:0xa402f977aaee0c76!8m2!3d47.48543!4d19.071336'">Directions</button>
                     </div>
