--- a/src/Hosted/legal.html
+++ b/src/Hosted/legal.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>IntelliFactory</title>
     <meta name="description" content="">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <script src="/themekit/scripts/jquery.min.js"></script>
     <script src="/themekit/scripts/main.js"></script>
     <link rel="stylesheet" href="/themekit/css/bootstrap-grid.min.css">
@@ -21,7 +23,7 @@
 </head>
 <body>
     <div id="preloader"></div>
-    <nav class="menu-classic light menu-fixed menu-one-page align-right" data-menu-anima="fade-bottom" data-scroll-detect="true">
+    <nav class="menu-wide light menu-fixed menu-one-page align-right" data-menu-anima="fade-bottom" data-scroll-detect="true">
       <div ws-replace="MenuBar">
         <div class="container">
           <div class="menu-brand">
