--- a/src/Hosted/research.html
+++ b/src/Hosted/research.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Research</title>
     <meta name="description" content="" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <script src="themekit/scripts/jquery.min.js"></script>
     <script src="themekit/scripts/main.js"></script>
     <link rel="stylesheet" href="themekit/css/bootstrap-grid.min.css" />
@@ -24,9 +26,7 @@
 <body>
     <div id="preloader"></div>
     <!-- NAVIGATION MENU -->
-    <nav class="menu-classic menu-transparent light menu-fixed menu-one-page
-    align-right menu-wide" data-menu-anima="fade-bottom"
-         data-scroll-detect="true">
+    <nav class="menu-wide menu-transparent light menu-fixed menu-one-page align-right" data-menu-anima="fade-bottom" data-scroll-detect="true">
         <div ws-replace="MenuBar"></div>
     </nav>
     <header class="header-image ken-burn-center light full-screen" data-parallax="true" data-natural-height="600" data-natural-width="1920" data-bleed="0" data-image-src="assets\research-1.jpg" data-offset="0">
