#10 Changed content for Open Position page

--- a/src/Hosted/openPosition.html
+++ b/src/Hosted/openPosition.html
@@ -39,9 +39,9 @@
                               What you get:
                           </p>
                           <ul>
-                              <li>Variety and Challenge</li>
-                              <li>Work-Life-Balance</li>
-                              <li>Professional and Personal Growth</li>
+                              <li>Different technoliges and challenges</li>
+                              <li>Balanced work and life</li>
+                              <li>Growth professionally and personally</li>
                           </ul>
                       </div>
                       <div class="col-lg-6">
@@ -55,8 +55,8 @@
                         <div class="icon-box icon-box-left">
                             <i class="im-air-balloon"></i>
                             <div class="caption">
-                                <h3>The best job</h3>
-                                <p>All day immerse into the nature and amazing views.</p>
+                                <h3>Cutting-edge technology</h3>
+                                <p>You will work with latest technologies.</p>
                             </div>
                         </div>
                     </div>
@@ -64,8 +64,8 @@
                         <div class="icon-box icon-box-left">
                             <i class="im-bar-chart2"></i>
                             <div class="caption">
-                                <h3>Career opportunities</h3>
-                                <p>Grow with us is possible thanks to our levels structure.</p>
+                                <h3>Future career development</h3>
+                                <p>You can grow your career within the company.</p>
                             </div>
                         </div>
                     </div>
@@ -73,8 +73,8 @@
                         <div class="icon-box icon-box-left">
                             <i class="im-bee"></i>
                             <div class="caption">
-                                <h3>Meet amazing people</h3>
-                                <p>We're the best team ever! Funny and friendly with each other.</p>
+                                <h3>Friendly team</h3>
+                                <p>Our team of developers are funny and friendly.</p>
                             </div>
                         </div>
                     </div>
